Use vue single file component

--- a/app/views/rinfo/info/sql.html.slim
+++ b/app/views/rinfo/info/sql.html.slim
@@ -1,5 +1,5 @@
-
 css:
+
   table.result{
     border-collapse: collapse;
   }
@@ -9,16 +9,6 @@ css:
   }
 
 #app
-  div
-    textarea(v-model='sql')
-  button(@click='execute') execute
-
-  table.result(v-if='result')
-    thead
-      tr
-        th(v-for='column in result.columns') {{column}}
-    tbody
-      tr(v-for='row in result.rows')
-        td(v-for='value in row') {{value}}
+  App
 
 = javascript_include_tag 'rinfo/sql'
