--- a/app/views/layouts/rsql/application.html.slim
+++ b/app/views/layouts/rsql/application.html.slim
@@ -7,7 +7,7 @@ html
     title = yield(:title)
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'rinfo/application', media: 'all'
-    = javascript_include_tag 'rinfo/application'
+    = stylesheet_link_tag 'rsql/application', media: 'all'
+    = javascript_include_tag 'rsql/application'
   body
     = yield
