--- a/app/views/rsql/info/sql.html.slim
+++ b/app/views/rsql/info/sql.html.slim
@@ -4,6 +4,6 @@
 script src='//cdnjs.cloudflare.com/ajax/libs/ace/1.4.6/ace.js'
 
 - if Rails.app_class.to_s.start_with? 'Dummy'
-  = javascript_include_tag 'rinfo/sql.dev'
+  = javascript_include_tag 'rsql/sql.dev'
 - else
-  = javascript_include_tag 'rinfo/sql'
+  = javascript_include_tag 'rsql/sql'
