--- a/app/views/rsql/root/index.html.slim
+++ b/app/views/rsql/root/index.html.slim
@@ -1,3 +1,5 @@
+- content_for :title, 'SQL Console'
+
 - content_for :head
   script src='//cdnjs.cloudflare.com/ajax/libs/ace/1.4.6/ace.js'
   link rel='stylesheet' href='//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'
