--- a/app/views/rsql/root/index.html.slim
+++ b/app/views/rsql/root/index.html.slim
@@ -1,4 +1,4 @@
-- content_for :title, 'SQL Console'
+- content_for :title, 'SQL console'
 
 - content_for :head
   script src='//cdnjs.cloudflare.com/ajax/libs/ace/1.4.6/ace.js'
